--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -56,17 +56,17 @@
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="{%url 'origen_ingresos'%}">Origen de los ingresos del municipio</a></li>
                    <li><a href="{%url 'origen_gastos'%}">Origen de gastos del municipio</a></li>
-                    <!--li class="divider"></li>
+                    <li class="divider"></li>
                     <li><a href="{%url 'gastos_funcion'%}">Gastos de funcionamiento</a></li>
-                    <li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
+                    <!--li><a href="{%url 'gastos_personal'%}">Gastos de personal</a></li>
                     <li><a href="{%url 'autonomia_gastos'%}">Autonomía para asumir gastos operativos</a></li>
                     <li><a href="{%url 'ahorro_corriente'%}">Ahorro corriente para inversiones</a></li>
                     <li><a href="{%url 'peso_deuda'%}">Peso del servicio de la deuda</a></li>
                     <li class="divider"></li>
-                    <li><a href="{%url 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</a></li-->
+                    <li><a href="{%url 'ejecucion_presupuesto'%}">Ejecuci&oacute;n del presupuesto</a></li>
                     <li><a href="{%url 'inversion_area'%}">Distribuci&oacuteln de la inversión por área</a></li>
-                    <li><a href="{%url 'inversion'%}">Inversión</a></li>
-                    <li><a href="{%url 'inversion_categoria'%}">Inversión por categoría</a></li>
+                    <li><a href="{%url 'inversion'%}">Inversión</a></li-->
+                    <li><a href="{%url 'inversion_categoria'%}">Inversiones</a></li>
                   </ul>
                 </li>
                 <li><a href="/core/plan-de-inversion/?inversion__municipio__slug=managua&inversion__fecha_0=2014-01-01&inversion__fecha_1=2014-12-31">PAN DE INVERSIÓN</a></li>
