--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -30,7 +30,7 @@
     {% if municipio and charts.4 %}
         {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, tipo, asignado_barra, barra" }}
     {% else %}
-        {{ charts|load_charts:"ejecutado, tipo, asignado_barra, barra" }}
+        {{ charts|load_charts:"ejecutado, comparativo_anios, comparativo2, comparativo3, tipo, asignado_barra, barra" }}
     {% endif %}
     <div id="oimTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
@@ -40,7 +40,7 @@
               <div class="row totales">
                 <div class="col-md-8 text-left">
                 <img src="/static/img/Otros origenes.png" class="pull-left" height="40" alt="{{ total.tipogasto__nombre }}" />
-                <h4>{{ total.tipogasto__nombre }}</h4>
+                <h4>{{ total.subsubtipogasto__origen__nombre }}</h4>
                 </div>
                 <div class="col-md-3">
                     <span class="btn btn-info col-md-7">{{ total.percent }}</span>
