componiendo la inversion minima por clase

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -51,7 +51,7 @@
             <div id="navbar" class="navbar-collapse collapse pull-right">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="{% url 'home' %}">INICIO</a></li>
-                <li><a href="#about">&iquest;QU&Eacute; SIGNIFICA?</a></li>
+                <li><a href="/significado/">&iquest;QU&Eacute; SIGNIFICA?</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PRESUPUESTOS <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
