moviendo .sql's y iniciando con grafico de "municipios de la misma clase"

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -69,7 +69,7 @@
                     <li><a href="{%url 'inversion_categoria'%}">Inversiones</a></li>
                   </ul>
                 </li>
-                <li><a href="/core/plan-de-inversion/?inversion__municipio__slug=managua&inversion__fecha_0=2014-01-01&inversion__fecha_1=2014-12-31">PLANES DE INVERSIÓN</a></li>
+                <li><a href="/core/plan-de-inversion/?inversion__municipio__slug=boaco&inversion__year=2015">PLANES DE INVERSIÓN</a></li>
                 <li><a href="#contact">CONTÁCTENOS</a></li>
               </ul>
             </div>
@@ -110,15 +110,20 @@
 
       <!-- FOOTER -->
       <footer>
+          <div class="row">
+              <div class="container">
+
         <p class="pull-right logos" style="margin-right: 25px;">
         <a href="#"><img src="{% static 'img/aid.png' %}" alt="USAID"/ width="120" ></a>
         <a href="#"><img src="{% static 'img/logoguegue.png' %}" alt="Guegue" width="140"/></a>
         <a href="#"><img src="{% static 'img/gcom.png' %}" alt="Global communities" width="140" /></a>
         </p>
-        <div class="col-md-10"> Las opiniones expresadas en este sitio web no reflejan necesariamente las de la Agencia de los Estados Unidos para el Desarrollo
+        <div class="col-md-12" style="margin-top:20px;margin-bottom:-30px;"><small> Las opiniones expresadas en este sitio web no reflejan necesariamente las de la Agencia de los Estados Unidos para el Desarrollo
         
-        Internacional, USAID, o la del Gobierno de los Estados Unidos.</div>
-       </footer>
+            Internacional, USAID, o la del Gobierno de los Estados Unidos.</small></div>
+               </div>
+           </div>
+    </footer>
 
     </div><!-- /.container -->
 
